# qmodel

./: README.md  pyproject.toml  run.py  timer.py
coptimize/: coptimize.py  ex_cubo.py  ex_dicke.py  ex_four_sites.py  ex_lattice.py  ex_rabi.py  ex_ring.py  ex_three_sites.py
coptimize/ex_cubo/: cubo-F-line-20250301-010321.pkl  cubo-F-line-20250301-084551.pkl  cubo-F-line-20250303-093704.pkl  cubo-F-line-20250312-120315.pkl
coptimize/ex_four_sites/: four-sites-F-plane-20250227-211714_iniNone_jmpPhase.pkl  four-sites-F-plane-20250228-022827_iniPhase_jmpPhase.pkl
coptimize/ex_ring/: ring-comparison-20250328-065124.pkl
coptimize/ex_three_sites/: three-sites-F-20250228-102911_jmpNone.pkl  three-sites-F-20250228-103748_jmpSign.pkl  three-sites-F-20250228-111937_jmpPhase.pkl
examples/: ex-hubbard-trimer.py  ex-quantum-rabi-N=2.py  ex-quantum-rabi.py  ex-spin-lattice.py  ex-tri-lattice.py
qmodel/: __init__.py  dft.py  docu.py  ex-quantum-rabi-M=2.py  ex-quantum-rabi-N=2.py  ex-quantum-rabi.py  ex-spin-lattice.py  ex-tri-lattice.py  func.py  hilb.py  oscillator.py  qmodel.py  rdm.py  spin.py  test.py  timer.py
test/: comparison_vebjoern.py  rabi_plot_vb.py  test_rabi.py
