[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "qmodel"
version = "0.2.1"
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]
authors = [
    {name = "Markus Penz", email = "m.penz@inter.at"},
]
license = {file = "LICENSE"}
