[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "qmodel"
version = "0.2.2"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "itertools"
]
authors = [
    {name = "Markus Penz", email = "m.penz@inter.at"},
]
license = {file = "LICENSE"}
